# ist-network-security

./: .gitignore  Cargo.toml  README.md
iterutils/: Cargo.toml
iterutils/src/: lib.rs
openssl-utils/: Cargo.toml
openssl-utils/src/: aead.rs  assymetric_secret.rs  cert.rs  lib.rs  pubkey_fingerprint.rs  sign.rs
openssl-utils/src/test_certs/: ca.cert.pem  ca.key.pem  client-auth.cert.pem  client-auth.expired.cert.pem  client-auth.key.pem  client-sign.cert.pem  client-sign.expired.cert.pem  client-sign.key.pem  server.cert.pem  server.expired.cert.pem  server.key.pem
proposal/: A41_Tue_1700_8_proposal.bib  A41_Tue_1700_8_proposal.tex  compile.sh
proposal/ps/: .gitignore  compile.sh
proposal/src/: plan.tex  problem.tex  sol.tex
protos/: Cargo.toml  build.rs  r2.proto
protos/src/: lib.rs  r2.proto  r2_identity.proto
r2/: Cargo.toml
r2-client/: Cargo.toml
r2-client/src/: collab_fetcher.rs  lib.rs  sigkey.rs
r2-client/src/model/: commit.rs  filesystem_repo.rs  fs_storage.rs  mod.rs  repo.rs  snapshot.rs  storage.rs  user.rs
r2-client/src/persistence/: fs_storage.rs  mod.rs  storage.rs
r2-client/src/remote/: dummy_remote.rs  grpc_remote.rs  mod.rs  model.rs  remote.rs
r2-client/src/storage/: fs_storage.rs  storage.rs
r2-client/src/test_utils/: ca.cert.pem  ca.key.pem  clientA-auth.cert.pem  clientA-auth.expired.cert.pem  clientA-auth.key.pem  clientA-sign.cert.pem  clientA-sign.expired.cert.pem  clientA-sign.key.pem  clientB-auth.cert.pem  clientB-auth.expired.cert.pem  clientB-auth.key.pem  clientB-sign.cert.pem  clientB-sign.expired.cert.pem  clientB-sign.key.pem  mod.rs  rsa_keypair_a.pk8  rsa_keypair_b.pk8
r2-identity/: Cargo.toml
r2-identity/src/: main.rs  service.rs
r2-server/: Cargo.toml
r2-server/src/: main.rs
r2-server/src/services/: auth_utils.rs  client_api.rs  local_store.rs  mod.rs  service.rs
r2-server/src/storage/: fs_storage.rs  storage.rs
r2/src/: lib.rs  main.rs
resources/: .gitignore  certs.conf  dev-ca.crt  dev-ca.key  dev-ca.pem  dev-ca.srl  dev-server.csr  dev-server.key
sbin/: create_certs.sh
test-ca-setup/: Cargo.toml
test-ca-setup/src/: main.rs
