[package]
name = "openssl-utils"
version = "0.1.0"
authors = [
	"bsdinis <baltasar.dinis@tecnico.ulisboa.com>",
	"abread <andrebreda@tecnico.ulisboa.pt>",
	"wilson <wilson.jose.lourenco.pereira@tecnico.ulisboa.pt>",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.30"
chrono = "0.4.19"
x509-parser = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
thiserror = "1.0"