[package]
name = "protos"
version = "0.1.0"
authors = ["bsdinis <baltasar.dinis@tecnico.ulisboa.com>", "abread <andrebreda@tecnico.ulisboa.pt>", "wilson <wilson.jose.lourenco.pereira@tecnico.ulisboa.pt>"]
edition = "2018"

[dependencies]
prost = "0.6.1"
tonic = { version = "0.3.1", features = ["tls"] }

[build-dependencies]
tonic-build = "0.3.1"
