[package]
name = "protos"
version = "0.1.0"
authors = [
	"bsdinis <baltasar.dinis@tecnico.ulisboa.com>",
	"abread <andrebreda@tecnico.ulisboa.pt>",
	"wilson <wilson.jose.lourenco.pereira@tecnico.ulisboa.pt>",
]
edition = "2018"

[dependencies]
prost = "0.6.1"
#tonic = "0.3.1" # bug in hyper/tonic means we need to do some things by hand
tonic = { git = "https://github.com/abread/tonic", branch = "mtls-expose-peer-certs" }
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
tonic-build = "0.3.1"
