[package]
name = "r2-client"
version = "0.1.0"
authors = ["bsdinis <baltasar.dinis@tecnico.ulisboa.com>", "abread <andrebreda@tecnico.ulisboa.pt>", "wilson <wilson.jose.lourenco.pereira@tecnico.ulisboa.pt>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

ring = "0.16.17"
diffy = "0.2.0"
chrono = "0.4.19"
serde = { version = "1.0", features = ["derive"] }
