[package]
name = "r2-client"
version = "0.1.0"
authors = [
	"bsdinis <baltasar.dinis@tecnico.ulisboa.com>",
	"abread <andrebreda@tecnico.ulisboa.pt>",
	"wilson <wilson.jose.lourenco.pereira@tecnico.ulisboa.pt>",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.23", features = ["full"] }
#tonic = { version = "0.3.1", features = ["tls"] } # bug in hyper/tonic means we need to do some things by hand
tonic = { git = "https://github.com/abread/tonic", branch = "mtls-expose-peer-certs", features = ["tls"] }
protos = { path = "../protos" }
openssl = "0.10.30"
openssl-utils = { path = "../openssl-utils" }

serde = { version = "1.0", features = ["derive"] }
diffy = "0.2.0"
chrono = { version = "0.4.19", features = ["serde"] }
toml = "0.5"
fs2 = "0.4.3"
lazy_static = "1.4.0"
hex = "0.4.2"
thiserror = "1.0"

[dev-dependencies]
tempdir = "0.3.7"
