[package]
name = "r2-server"
version = "0.1.0"
authors = [
	"bsdinis <baltasar.dinis@tecnico.ulisboa.com>",
	"abread <andrebreda@tecnico.ulisboa.pt>",
	"wilson <wilson.jose.lourenco.pereira@tecnico.ulisboa.pt>",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1"
eyre = "0.6"
fs2 = "0.4"
lazy_static = "1"
openssl = "0.10"
openssl-utils = { path = "../openssl-utils" }
protos = { path = "../protos" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "0.2", features = ["full"] }
bincode = "1.3"
tonic = { git = "https://github.com/abread/tonic", branch = "mtls-expose-peer-certs", features = ["tls"] }
tracing = "0.1"
tracing-appender = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2"
uuid = { version = "0.8", features = ["serde", "v4"] }

[dev-dependencies]
tempdir = "0.3.7"
