[package]
name = "r2-server"
version = "0.1.0"
authors = [
	"bsdinis <baltasar.dinis@tecnico.ulisboa.com>",
	"abread <andrebreda@tecnico.ulisboa.pt>",
	"wilson <wilson.jose.lourenco.pereira@tecnico.ulisboa.pt>",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.23", features = ["full"] }
#tonic = { version = "0.3.1", features = ["tls"] } # bug in hyper/tonic means we need to do some things by hand
tonic = { git = "https://github.com/abread/tonic", branch = "mtls-expose-peer-certs", features = ["tls"] }
protos = { path = "../protos" }
openssl-utils = { path = "../openssl-utils" }
openssl = "0.10.30"
argh = "0.1"

