[package]
name = "r2"
version = "0.1.0"
authors = ["bsdinis <baltasar.dinis@tecnico.ulisboa.com>", "abread <andrebreda@tecnico.ulisboa.pt>", "wilson <wilson.jose.lourenco.pereira@tecnico.ulisboa.pt>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "0.3", features = [ "full" ] }
tokio-rustls = "0.20"
webpki-roots = "0.20"
argh = "0.1"
