[package]
name = "r2"
version = "0.1.0"
authors = [
	"bsdinis <baltasar.dinis@tecnico.ulisboa.com>",
	"abread <andrebreda@tecnico.ulisboa.pt>",
	"wilson <wilson.jose.lourenco.pereira@tecnico.ulisboa.pt>",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
#tonic = { version = "0.3.1", features = ["tls"] } # bug in hyper/tonic means we need to do some things by hand
tonic = { git = "https://github.com/abread/tonic", branch = "mtls-expose-peer-certs", features = ["tls"] }
protos = { path = "../protos" }
argh = "0.1"
structopt = "0.3"
r2-client = { path = "../r2-client" }
futures-util = "0.3"
openssl = "0.10"
openssl-utils = { path = "../openssl-utils" }
hex = "0.4"
nom = "6"
regex = "1"
eyre = "0.6"
color-eyre = "0.5"
diffy = "0.2"