[package]
name = "test-ca-setup"
version = "0.1.0"
authors = [
	"bsdinis <baltasar.dinis@tecnico.ulisboa.com>",
	"abread <andrebreda@tecnico.ulisboa.pt>",
	"wilson <wilson.jose.lourenco.pereira@tecnico.ulisboa.pt>",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.30"
structopt = "0.3.21"
maplit = "1.0.2"
